--- a/apps/apps-docs/developer.android.com/intro1-basics/app/src/main/res/layout/activity_main.xml
+++ b/apps/apps-docs/developer.android.com/intro1-basics/app/src/main/res/layout/activity_main.xml
@@ -38,12 +38,32 @@
         android:id="@+id/buttonOpenImageSample"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:fontFamily="@font/lobster"
         android:onClick="openImageSample"
         android:text="@string/open_image_sample"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText"
-        app:layout_constraintVertical_bias="0.072" />
+        tools:layout_editor_absoluteX="79dp" />
+
+    <Button
+        android:id="@+id/buttonListPermissions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:onClick="listPermissions"
+        android:text="@string/list_permissions"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.315"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonOpenImageSample" />
+
+    <TextView
+        android:id="@+id/textViewPermissions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="72dp"
+        android:text="@string/permissions_will_be_listed_here"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonListPermissions" />
 </androidx.constraintlayout.widget.ConstraintLayout>
