--- a/apps/apps-web/classroom.udacity.com/with-kotlin/intro1/app/src/main/res/layout/activity_main.xml
+++ b/apps/apps-web/classroom.udacity.com/with-kotlin/intro1/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/result_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
@@ -16,7 +17,7 @@
         android:textSize="30sp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/roll_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
